--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,43 +1,47 @@
-source 'https://rubygems.org'
-git_source(:github) { |repo| "https://github.com/#{repo}.git" }
+source "https://rubygems.org"
+git_source(:github) {|repo| "https://github.com/#{repo}.git" }
 
-ruby '2.5.1'
+ruby "2.5.1"
 
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.2.1'
-# Use postgresql as the database for Active Record
-gem 'pg', '>= 0.18', '< 2.0'
-# Use Puma as the app server
-gem 'puma', '~> 3.11'
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-# gem 'jbuilder', '~> 2.5'
-# Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem "rails", "~> 5.2.1"
 
-# Use ActiveStorage variant
-# gem 'mini_magick', '~> 4.8'
-
-# Use Capistrano for deployment
-# gem 'capistrano-rails', group: :development
-
-# Reduces boot times through caching; required in config/boot.rb
-gem 'bootsnap', '>= 1.1.0', require: false
-
-# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-# gem 'rack-cors'
+gem "active_model_serializers"
+gem "aws-sdk-s3", require: false
+gem "bootsnap", ">= 1.1.0", require: false
+gem "committee", github: "FiNCDeveloper/committee"
+gem "counter_culture"
+gem "kaminari"
+gem "newrelic_rpm"
+gem "omniauth-github"
+gem "pg", ">= 0.18", "< 2.0"
+gem "puma", "~> 3.11"
+gem "pundit"
+gem "rack-cors"
+gem "rails-i18n"
+gem "redcarpet"
+gem "seed-fu"
+gem "sentry-raven"
+gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem "dotenv-rails"
+  gem "factory_bot_rails"
+  gem "faker"
+  gem "rspec-rails"
 end
 
 group :development do
-  gem 'listen', '>= 3.0.5', '< 3.2'
-  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
+  gem "annotate"
+  gem "listen", ">= 3.0.5", "< 3.2"
+  gem "onkcop", require: false
+  gem "spring"
+  gem "spring-watcher-listen", "~> 2.0.0"
 end
 
+group :test do
+  gem "rspec_junit_formatter"
+end
 
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+group :doc do
+  gem "json_refs", require: false
+end
