--- a/server/.gitignore
+++ b/server/.gitignore
@@ -21,3 +21,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# RSpec
+spec/examples.txt
+
+# dotenv-rails
+.env
