[server] Add pry-rails to Gemfile

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -27,6 +27,7 @@ group :development, :test do
   gem "dotenv-rails"
   gem "factory_bot_rails"
   gem "faker"
+  gem "pry-rails"
   gem "rspec-rails"
 end
 
