--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,9 @@
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-links": "^3.3.2",
+    "@types/storybook__react": "^3.0.9",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "prettier": "^1.14.2",
