--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "qs": "^6.5.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-scripts-ts": "2.17.0"
@@ -24,6 +26,7 @@
     "@storybook/react": "^3.4.10",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.9.4",
+    "@types/qs": "^6.5.1",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/storybook__addon-actions": "^3.4.1",
