--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "connected-react-router": "^4.4.1",
+    "history": "^4.7.2",
     "qs": "^6.5.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-scripts-ts": "2.17.0"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.17.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -24,11 +31,16 @@
     "@storybook/addon-links": "^3.4.10",
     "@storybook/addons": "^3.4.10",
     "@storybook/react": "^3.4.10",
+    "@types/history": "^4.7.0",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.9.4",
     "@types/qs": "^6.5.1",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router": "^4.0.31",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/redux-logger": "^3.0.6",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-links": "^3.3.2",
     "@types/storybook__react": "^3.0.9",
@@ -36,6 +48,6 @@
     "babel-runtime": "^6.26.0",
     "prettier": "^1.14.2",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.3"
+    "typescript": "^2.9.2"
   }
 }
